--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,12 @@
 			<version>2.5.4</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.29.0</version>
+		</dependency>
 
 	</dependencies>
 
