asfd Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,19 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dbmovieonline?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=010900
 
 # JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+
+#aws S3
+aws.endpoint= https://movieonline.s3.ap-southeast-1.amazonaws.com
+aws.accessKey= AKIAVHFYBTGI5DW63ONK
+aws.secretKey= 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
+aws.s3.bucket= movieonline
+aws.s3.region= ap-southeast-1
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
